refacter =login && forget password